Fix Dog Modal 1 text too big on mob

--- a/css/dogssectioncustom.css
+++ b/css/dogssectioncustom.css
@@ -54,3 +54,14 @@
 #team {
   background-color: white !important;
 }
+
+#dabi-name {
+  font-size: 3rem;
+}
+
+/* Smaller font size for mobile devices */
+@media (max-width: 576px) {
+  #dabi-name {
+    font-size: 1.5rem;
+  }
+}
